Fixed top panel dropdown, improved UX on hover, spacing, etc. For http://bugzilla.pculture.org/show_bug.cgi?id=16110

--- a/media/css/imported/top_user_panel.css
+++ b/media/css/imported/top_user_panel.css
@@ -3,70 +3,68 @@
 /*//////////   ~  Top User Panel  ~   //////////*/
 
 
-.accountstatus{
+.accountstatus {
   width: 600px;
   text-align: right;
   float: right;
-  }
+}
 
-
-.accountstatus p{
+.accountstatus p {
   margin: 0;
   padding: 6px 0px 0 0;
-  }
+}
 
-
-
-.accountstatus p a{
+.accountstatus p a {
   margin: 0;
   padding: 0px 10px 0 0;
-  }
+}
 
-
-.user_panel{
-  right: 0;
-  top: 5px;
+.user_panel {
   font-size: 11px;
-  position: absolute;
-  text-align: right;
-  padding-right: 20px;
+  text-align: left;
   z-index: 1001;
-  }
+  float: right;
+}
 
 .user_panel:hover .dropdown { 
-  display: block; }
+  display: block;
+}
   
-.user_panel:hover .user { 
-   float: right;
+.user_panel:hover .user {
    background-color: #f0f9fb;
-   position: relative;
    z-index: 1001;
    -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3); 
-   -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.3); }
+   -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.3);
+}
 
 .user_panel a {
   color: #528898;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
-.user_panel .user { 
+.user_panel .user {
   height: 25px;
   line-height: 26px;
-  padding: 0 10px;
+  padding: 3px 10px 0 10px;
   border-top-left-radius:     4px;
-  border-top-right-radius:    4px; }
+  border-top-right-radius:    4px;
+}
 
 .user_panel .message_count { 
-  display: inline-block;
+  display: block;
   background-color: #aec2c8;
   color: #fff;
   font-weight: bold;
   text-align: center;
   font-size: 11px;
   line-height: 15px;
-  width: 20px;
-  border-radius: 10px; }
+  padding: 2px 11px 2px 11px;
+  margin: 3px 0 0 0;
+  border-radius: 10px;
+  float: right;
+}
 
-.user_panel .dropdown { 
+.user_panel .dropdown {
   display: none;
   background-color: #f0f9fb;
   text-align: left;
@@ -74,26 +72,55 @@
   font-size: 12px;
   line-height: 24px;
   width: 145px;
-  padding: 10px 20px;
-  position: relative;
-  z-index: 1000;
-  border-top-left-radius:     4px;
-  border-bottom-left-radius:  4px;
-  border-bottom-right-radius: 4px;
+  padding: 10px 0 10px 0;
+  position: absolute;
+  -moz-border-radius-topright:        4px;
+  -moz-border-radius-bottomleft:      4px;
+  -moz-border-radius-bottomright:     4px;
+  -webkit-border-top-right-radius:    4px;
+  -webkit-border-bottom-left-radius:  4px;
+  -webkit-border-bottom-right-radius: 4px;
   -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3); 
   -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.3);
-  z-index: 9000; }
+  z-index: 1000;
+}
+
+.user_panel .dropdown ul#dropdown_menu li {
+  float: none;
+  line-height: 24px;
+  list-style: none;
+  margin: 0;
+  text-transform: none;
+}
+
+.user_panel .dropdown ul#dropdown_menu li.u_login {
+  padding-left:15px;
+  background:url(images/interface/bullet_login.gif) no-repeat left center; 
+}
+
+.user_panel .dropdown ul#dropdown_menu li a {
+  color: #319ac5;
+  text-decoration: none;
+  
+  display: block;
+  padding: 5px 10px 5px 10px;
+}
+
+.user_panel .dropdown ul#dropdown_menu li a:hover {
+  text-decoration: none;
+  color: #287392;
+  background: #dce7ea;
+}
 
 .user_panel .teams_menu { 
-  background-color: #eaf6f9;
   border-top: 1px solid #deecef;
-  margin: 10px -20px -10px;
-  padding: 0 20px 10px;
   border-bottom-left-radius:  4px;
-  border-bottom-right-radius: 4px; }
+  border-bottom-right-radius: 4px; 
+}
 
 .user_panel .teams_menu h4 { 
-  margin: 10px 0 0; }
+  margin: 5px 0 2px 10px;
+}
 
 .user_panel ul { 
   padding: 0;
