--- a/media/index/style.css
+++ b/media/index/style.css
@@ -85,33 +85,45 @@ div.mainNav ul li a small{
     text-align:center;
     display:block
     }
+
 /*alphaNav*/
-div.alphaNav{
-    float:right;
-    height:45px;
+
+div.alphaNav {
+  float: right;
 }
-div.alphaNav ul{
-    float:left;
-    height:45px;
+
+div.alphaNav ul#subnav {
+  float:left;
 }
-div.alphaNav ul li{
-    float:left;
-    line-height:45px;
-    list-style:none;
-    margin:0 10px;
-    text-transform:capitalize;
+
+div.alphaNav ul#subnav li {
+  float: left;
+  line-height: 45px;
+  list-style: none;
+  margin: 0 10px;
+  text-transform: capitalize;
 }
-div.alphaNav ul li.u_login{
-    padding-left:15px;
-    background:url(images/interface/bullet_login.gif) no-repeat left center; 
+
+div.alphaNav ul#subnav li.u_login {
+  padding-left:15px;
+  background:url(images/interface/bullet_login.gif) no-repeat left center; 
 }
-div.alphaNav ul li a{
-    color:#319ac5;
-    text-decoration:underline;
+
+div.alphaNav ul#subnav li a {
+  color:#319ac5;
+  text-decoration:underline;
 }
-div.alphaNav ul li a:hover{
-    text-decoration:none;
+
+div.alphaNav ul#subnav li a:hover {
+  text-decoration:none;
 }
+
+#subnav_menu {
+  position: relative;
+  top: 6px;
+  right: 8px;
+}
+
 /*Start--------------------------------------------Page Layout*/
 
 /*========================================
